--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,28 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* globals.css ou styles.css */
 
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+/* Estilização personalizada */
 :root {
   margin: 0;
-  border: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
 
+/* Barras de rolagem personalizadas */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #4263EB;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #d2d8f7;
+}
