--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+  background: #141414;
 }
 
 /* Barras de rolagem personalizadas */
