--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #4263EB;
+  background: #4263eb;
   border-radius: 10px;
 }
 
@@ -29,8 +29,7 @@
   background: #d2d8f7;
 }
 
-
-.icons {
+.icon1 {
   background: #141414;
   box-shadow: 0px 0px 50% #141414;
   padding: 10px;
@@ -39,21 +38,29 @@
   top: calc(50vh - 16px);
   left: 80px;
   transform: translateX(-50%);
-  transition: opacity 5s;
-  
+  opacity: 0;
+  transition: opacity 0.5s;
 }
-
 
 .reactIcon {
   border-radius: 100%;
   box-shadow: 0px 0px 50px red;
-  transition: opacity 5s;
-  
 }
 
+.icon2 {
+  background: #141414;
+  box-shadow: 0px 0px 50% #141414;
+  padding: 10px;
+  position: absolute;
+  border-radius: 100%;
+  top: calc(160vh - 16px);
+  left: 80px;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 4s;
+}
 
-
-
-
-
-
+.past {
+  border-radius: 100%;
+  box-shadow: 0px 0px 50px blue;
+}
